<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TCLLauncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="help">帮助</string>
    <string name="help_title">&#032; &#032; &#032; 帮助</string>
    <string name="next_page">下一页</string>
    <string name="pre_page">上一页</string>
    <string name="back">返回</string>
    <string name="play">播放</string>
    <string name="favorite">收藏</string>
    <string name="movie_recommand">影片推荐</string>
    <string name="unknown_error">未知错误</string>
    <string name="http_error">网络错误</string>
    <string name="httpError">网络错误</string>
    <string name="volume">音量 : </string>

    <string name="records">播放记录</string>
    <string name="my_collection">我的收藏</string>
    <string name="ktv_doyen">K歌达人</string>
    <string name="film_search">影视搜索</string>
    <string name="tv_live">电视直播</string>
    <string name="hot_recommand">热门推荐</string>
    <string name="latest_udpate">最新更新</string>
    <string name="films">电影</string>
    <string name="sprite_hello">大白听候您的差遣</string>
	
    <string name="tv_series">电视剧</string>
    <string name="tv_variety">综艺</string>
    <string name="tv_cartoon">动漫</string>
    <string name="tv_pe">体育</string>
    <string name="tv_funny">搞笑</string>
    <string name="tv_entertaiment">娱乐</string>
    <string name="tv_local">离线</string>
    <string name="tv_dubi">杜比</string>
    <string name="tv_4k">4K</string>
    <string name="tv_1080">1080</string>
    
    <string name="playtime_init">00:00:00</string>
    
    <string name="voice_dialog_tips_light_open">灯光已开启</string>
    <string name="voice_dialog_tips_light_close">灯光已关闭</string>
    <string name="voice_dialog_tips_aircon_open">空调已开启</string>
    <string name="voice_dialog_tips_aircon_close">空调已关闭</string>
    <string name="voice_dialog_tips_aircon_set_temp">空调已设置到%1$d度</string>
    
    <string name="voice_request_error_invalid_request">无效请求</string>
    <string name="voice_request_error_inner_error">服务器内部错误</string>
    <string name="voice_request_error_semantic_error">业务操作失败，语义理解出错</string>
    <string name="voice_request_error_unmatch_scenery">服务不理解或不能处理该请求，本次请求没有匹配的场景</string>
    
    <string name="info_actors">主演 :</string>
    <string name="info_times">上映年代 :</string>
    <string name="info_area">地区 :</string>
    <string name="info_type">类型 :</string>
    
    <string name="app_id">535625b1</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    
    
    <string name="home_page">主页</string>
    <string name="all_music">所有音乐</string>
    <string name="all_photo">所有图片</string>
    <string name="all_video">所有视频</string>
    <string name="all_other_document">所有其他文档</string>
    <string name="author">创建者</string>
    <string name="size">大小</string>
    <string name="name">名称</string>
    <string name="date">日期</string>
    <string name="type">类型</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
</resources>
