<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_recording" />

            <TextView
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/home_recording_cover"
                android:gravity="center"
                android:text="@string/records" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_collection"
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_collect"
                android:paddingTop="@dimen/main_btn_favorite_text_padding_top"
                android:text="@string/my_collection" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_ktv"
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_bottom_2"
                android:paddingTop="@dimen/main_btn_ktv_text_padding_top"
                android:text="@string/ktv_doyen" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_search"
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_search"
                android:paddingTop="@dimen/main_btn_search_text_padding_top"
                android:text="@string/film_search" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_live" />

            <TextView
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/home_live_cover"
                android:gravity="center"
                android:text="@string/tv_live" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_recommand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_recommendation" />

            <TextView
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/home_recommendation_cover"
                android:gravity="center"
                android:text="@string/hot_recommand" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/media_newest_banner"
                style="@style/MainTitleCoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home_renew"
                android:paddingTop="@dimen/main_btn_latest_update_text_padding_top"
                android:text="@string/latest_udpate"
                android:textColor="@color/white" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@id/media_film_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_movie"
            android:text="@string/films"
            android:textSize="@dimen/main_title_cover_text_size"
            android:textColor="@color/host_selected_text_color" />

        <include layout="@layout/tv_category" />
    </LinearLayout>
</LinearLayout>